docs/tests/parser/structs/invalid/StructOperatorPrimitiveParam.b
struct Foo {
    operator +(int a, int b) { }
}
